fix: update current item color in dark mode for "on this page" sidebar

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -234,10 +234,6 @@ p {
   @apply px-[.4em] py-[.2em] text-sm bg-kinde-grey-50 rounded border-kinde-grey-100 dark:border-kinde-grey-700 dark:bg-kinde-grey-800 border-[1px];
 }
 
-.sl-markdown-content .c-aside.not-content code {
-  /* @apply bg-inherit; */
-}
-
 .sl-markdown-content .expressive-code * {
   margin-top: 0;
 }
@@ -478,4 +474,8 @@ starlight-tabs[data-sync-key="starlight-package-managers-pkg"]
   a[role="tab"][aria-selected="true"]
   svg {
   @apply opacity-100;
+}
+
+[aria-labelledby="starlight__on-this-page"] [aria-current="true"] {
+  @apply text-kinde-grey-900 dark:text-white;
 }
